--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,8 @@ dependencies {
 
     //loading View
     implementation 'com.ldoublem.loadingview:loadingviewlib:1.0'
+
+    //circular image view
+    implementation 'de.hdodenhof:circleimageview:3.0.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
