--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,12 @@ dependencies {
 
     //toasty
     implementation 'com.github.GrenderG:Toasty:1.4.2'
+
+    //sweet alert
+    implementation 'cn.pedant.sweetalert:library:1.3'
+
+    //swipe button
+    implementation 'androidx.recyclerview:recyclerview:1.1.0-beta03'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
 }
