--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,15 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="kk.techbytecare.fancylayouts">
+    package="kk.techbytecare.fancylayouts"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
+        tools:replace="android:icon"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Toasty.ToastyActivity"></activity>
+        <activity android:name=".SwipeButton.SwipeButton"></activity>
+        <activity android:name=".SweetAlert.SweetAlert" />
+        <activity android:name=".Toasty.ToastyActivity" />
         <activity android:name=".CoolMenu.CoolMenuActivity" />
         <activity android:name=".CircularImage.CircularImageActivity" />
         <activity android:name=".LoadingView.LoadingViewActivity" />
