--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,18 +21,22 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+    //androidX artifacts
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+
     //loading View
     implementation 'com.ldoublem.loadingview:loadingviewlib:1.0'
 
     //circular image view
-    implementation 'de.hdodenhof:circleimageview:3.0.0'
+    implementation 'de.hdodenhof:circleimageview:3.0.1'
     implementation 'com.squareup.picasso:picasso:2.71828'
 
     //cool menu
@@ -45,7 +49,12 @@ dependencies {
     implementation 'cn.pedant.sweetalert:library:1.3'
 
     //swipe button
-    implementation 'androidx.recyclerview:recyclerview:1.1.0-beta03'
-    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0-beta04'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
+
+    //nifty dialog
+    implementation 'com.github.sd6352051:NiftyDialogEffects:v1.0.3'
+
+    //Infinite Cards
+    implementation 'com.github.BakerJQ:Android-InfiniteCards:1.0.5'
 }
