--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="kk.techbytecare.fancylayouts"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="kk.techbytecare.fancylayouts">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
-        tools:replace="android:icon"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".SwipeButton.SwipeButton"></activity>
-        <activity android:name=".SweetAlert.SweetAlert" />
+        android:theme="@style/AppTheme"
+        tools:replace="android:icon">
+        <activity android:name=".InfiniteCards.InfiniteCards"></activity>
+        <activity android:name=".NiftyDialog.NiftyDialog" />
+        <activity android:name=".SwipeButton.SwipeButton" />
         <activity android:name=".Toasty.ToastyActivity" />
         <activity android:name=".CoolMenu.CoolMenuActivity" />
         <activity android:name=".CircularImage.CircularImageActivity" />
